# Whisper_Transcriptions

./: LICENSE  README.md  gitignore.txt  pyproject.toml  requirements.txt
src/whisper_transcribe/: transcriber.py
